# image-classifier

./: .gitignore  DEPLOYMENT.md  GIT-EXPLAINED.md  GITHUB-REPO-CONTENTS.md  README.md  WHAT-TO-COMMIT.md  pyproject.toml  requirements.txt  run.sh  test.html
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: clusters.py  images.py
backend/app/services/: image_service.py  storage_service.py
docs/: architecture-diagram.md  architecture.md  image_analysis_libraries.md
infrastructure/: AWS-IAM-SETUP.md  DEPLOYMENT-GUIDE.md  EC2-CONFIGURATION.md  EC2-SETUP.md  GIT-CLONE-EXPLAINED.md  QUICK-SETUP.md  README.md  apprunner-template.yaml  cloudformation-template.yaml  deploy.sh  setup-ec2.sh
ml/: clip_embedder.py  clusterer.py
